...
                android:layout_marginTop="@dimen/default_margin_content"
                android:animateLayoutChanges="true"
                app:layout_constraintBottom_toTopOf="@+id/checkBoxAdvancedMode"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
...
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/e_mail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_content_small"
                    android:hint="@string/username"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_content_small"
                    android:hint="@string/password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/imap_server"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextImapServer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_content_small"
                    android:hint="@string/imap_port"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextImapPort"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                    android:text="@string/security_type"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/spinnerImapSecurityType"
                    app:layout_constraintStart_toStartOf="@+id/layoutImapPort"
                    app:layout_constraintTop_toTopOf="@+id/spinnerImapSecurityType"
...
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/smtp_server"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextSmtpServer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_content_small"
                    android:hint="@string/smtp_port"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextSmtpPort"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                    android:text="@string/security_type"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/spinnerSmtpSecyrityType"
                    app:layout_constraintStart_toStartOf="@+id/layoutSmtpPort"
                    app:layout_constraintTop_toTopOf="@+id/spinnerSmtpSecyrityType"
...

                <CheckBox
                    android:id="@+id/checkBoxRequireSignInForSmtp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/smtp_username"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextSmtpUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/smtp_password"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextSmtpPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                android:layout_marginBottom="@dimen/default_margin_content"
                android:text="@string/advanced_settings"
                app:layout_constraintBottom_toTopOf="@+id/buttonTryToConnect"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintHorizontal_bias="0.0"
...
