...
    <string name="sending">Sending&#8230;</string>
    <string name="queued">Queued</string>
    <string name="cache_error">Can\'t send message: cache problem</string>
    <string name="can_not_delete_sending_message">You can\'t delete a message which is now being sent</string>
    <string name="preparing">Preparing&#8230;</string>
    <string name="back_up_my_key">Back up my key</string>
    <string name="there_are_no_private_keys">There are no imported private keys for %1$s</string>
    <string name="original_message_missing">Could not forward: original message missing</string>
    <string name="original_attachment_not_found">Could not forward: some attachments are not available</string>
    <string name="could_not_create">Could not create: click to see details</string>
    <string name="could_not_create_no_key_available">Could not create: no key available</string>
    <string name="message_failed_to_forward">Message failed to send. Please forward the message again</string>
    <string name="there_is_problem_with_cache">There is a problem with a temp cache directory. Please create the message again</string>
...
